--- a/.github/github-actions-demo.yml
+++ b/.github/github-actions-demo.yml
@@ -11,5 +11,6 @@ jobs:
         with:
           python-version: '3.12' 
       - run: uname -a
+      - run: pip install -r requirements.txt
       - run: pip install -U pytest
-      - run: pytest
+      - run: pytest --snapshot-update
